# nots

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  Cargo.toml  LICENSE.md  README.md  ROADMAP.md  release-please-config.json  release-plz.toml  rustfmt.toml
.cargo/: config.toml
.github/workflows/: build.yaml  ci.yaml  release-please.yaml  release-plz.yml
crates/nots/: Cargo.toml
crates/nots-cli/: CHANGELOG.md  Cargo.toml  install.sh  nots.example.toml
crates/nots-cli/src/: args.rs  main.rs  utils.rs
crates/nots-cli/src/api/: mod.rs  ssh.rs  tcp.rs
crates/nots-cli/src/commands/: app.rs  mod.rs  server.rs  upgrade.rs
crates/nots-cli/src/server/: docker.rs  mod.rs
crates/nots-client/: Cargo.toml  client.rs  lib.rs  models.rs
crates/nots-client/api/: mod.rs
crates/nots-client/client/: mod.rs  unix.rs
crates/nots-client/utils/: http.rs  mod.rs  tls.rs
crates/nots-client/worker/: mod.rs
crates/nots-core/: Cargo.toml
crates/nots-core/src/: lib.rs  utils.rs
crates/nots-worker/: CHANGELOG.md  Cargo.toml  Dockerfile
crates/nots-worker/src/: main.rs  utils.rs
crates/nots/src/: data.rs  git.rs  main.rs  proxy.rs  state.rs  utils.rs
crates/nots/src/apps/: docker.rs  mod.rs
crates/nots/src/code/: mod.rs
crates/nots/src/http/: api.rs  proxy.rs  worker.rs
crates/notsd/: CHANGELOG.md  Cargo.toml  Dockerfile
crates/notsd/src/: data.rs  env.rs  error.rs  git.rs  main.rs  state.rs  utils.rs
crates/notsd/src/backend/: docker.rs  mod.rs
crates/notsd/src/http/: api.rs  mod.rs  proxy.rs  worker.rs
crates/notsd/src/process/: docker.rs  mod.rs
crates/notsd/src/runtime/: docker.rs  mod.rs
crates/notsd/src/scheduler/: mod.rs
crates/notsd/src/scheduler/container/: docker.rs  mod.rs
crates/notsd/src/state/: kw_secret.rs  mod.rs
crates/notsd/src/state/data/: file.rs  kv.rs  mod.rs
crates/notsd/src/state/db/: file.rs  heed.rs  mod.rs
crates/test-service/: Cargo.toml  index.ts
crates/test-service/src/: main.rs
docs/: index.html  install.sh
src/: data.rs  main.rs  proxy.rs  utils.rs
