[package]
edition = "2021"
name = "nots"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6", features = ["macros"]}
color-eyre = "0.6.2"
hyper = "0.14"
opendal = {version = "0.41", features = ["services-persy"]}
persy = "1.4.5"
serde = "1.0.189"
serde_json = "1.0"
ssh-key = {version = "0.6.2", features = ["ed25519", "serde"]}
tokio = {version = "1", features = ["full"]}
