[package]
edition = "2021"
name = "nots-cli"
publish = false
version = "0.1.8"

[[bin]]
name = "nots-cli"
path = "src/main.rs"

[dependencies]
clap = {version = "4.4.6", features = ["derive", "color"]}
color-eyre = "0.6"
inquire = "0.6.2"
nots-core = {path = "../nots-core"}
time = "0.3"
tracing = "0.1"

# docker
bollard = {version = "0.15.0", optional = true}

# ssh
ssh-key = {version = "0.6.2", features = ["ed25519", "getrandom", "serde"], optional = true}

[features]
default = ["docker", "ssh"]
docker = ["dep:bollard"]
ssh = ["ssh-key"]
systemd = []
