[package]
edition="2021"
name="nots-cli"
publish=false
version="0.1.10"

[[bin]]
name="nots-cli"
path="src/main.rs"

[dependencies]
futures="0.3"
clap={version="4.4.6", features=["derive", "color"]}
color-eyre="0.6"
inquire="0.6"
spinoff="0.8.0"

time="0.3"
runas="1.1.0"
nots-client={path="../nots-client", version="*"}

tracing={version="0.1"}
tokio={version="1.11", default-features=false, features=["rt", "macros", "process", "net"]}
hyper={version="0.14"}
async-trait="0.1"
colored="2.0"
whoami="1.4.1"

# docker
bollard={version="0.15.0", optional=true}

# ssh
ssh-key={version="0.6.2", features=["ed25519", "getrandom", "serde"], optional=true}

[target.'cfg(unix)'.dependencies]
nix={version="0.27", features=["user"]}

[features]
default=["docker", "ssh"]
docker=["dep:bollard"]
ssh=["ssh-key"]
systemd=[]
