[package]
edition="2021"
name="nots-client"
publish=false
version="0.0.1"

[lib]
path="./lib.rs"

[dependencies]
color-eyre="0.6"
time="0.3"

dashmap="5.5.3"
serde={version="1.0", features=["derive"]}
serde_json="1.0"
tokio={version="1", features=["full"]}

tracing={version="0.1", optional=true}
tracing-error={version="0.2", optional=true}
tracing-subscriber={version="0.3", optional=true}

hyper={version="0.14"}
semver="1.0.20"

[target.'cfg(unix)'.dependencies]
hyperlocal="0.8"

[features]
default=["tracing"]
tracing=["dep:tracing", "dep:tracing-error", "dep:tracing-subscriber"]
