[package]
edition="2021"
name="nots-client"
publish=false
version="0.0.1"

[lib]
path="./lib.rs"

[dependencies]
color-eyre="0.6"
time={version="0.3", features=["serde"]}

serde={version="1.0", features=["derive"]}
serde_json="1.0"
tokio={version="1", features=["full"]}
futures="0.3"

tracing={version="0.1", optional=true}
tracing-error={version="0.2", optional=true}
tracing-subscriber={version="0.3", optional=true}

reqwest={version="0.11", default-features=false, features=["json", "stream"]}
semver="1.0.20"

globset={version="0.4", optional=true}

[features]
default=["tracing", "tls", "worker", "api"]

ssh=[]
tls=["reqwest/rustls-tls"]
worker=[]
api=[]

glob=["dep:globset"]
tracing=["dep:tracing", "dep:tracing-error", "dep:tracing-subscriber"]
