[package]
edition = "2021"
name = "nots-core"
publish = false
version = "0.1.0"

[dependencies]
color-eyre = "0.6"
time = "0.3"
tracing = "0.1"
tracing-error = "0.2"
tracing-subscriber = "0.3"

dashmap = "5.5.3"
serde = {version = "1.0", features = ["derive"]}

tokio = {version = "1", features = ["full"]}
