[package]
edition = "2021"
name = "nots-worker"
publish = false
version = "0.0.1"

[dependencies]
color-eyre = "0.6"
time = "0.3"
tracing = "0.1"
tracing-error = "0.2"

hyper = "0.14"
hyperlocal = "0.8"
nots-core = {path = "../nots-core", version = "*"}
tokio = {version = "1", features = ["macros"]}
tracing-subscriber = "0.3"

futures = "0.3"
futures-retry = "0.6.0"
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
tokio-util = {version = "0.7", features = ["compat"]}
