[package]
edition = "2021"
name = "nots"
version = "0.1.0"

[dependencies]
color-eyre = "0.6"
time = "0.3"
tracing = "0.1"
tracing-error = "0.2"

dashmap = "5.5.3"
nots-core = {path = "../nots-core"}
serde = "1.0.189"
serde_json = "1.0"

opendal = {version = "0.41", default-features = false, features = ["services-persy"]}
persy = "1.4.5"

axum = {version = "0.6", features = ["macros"]}
hyper = "0.14"
tokio = {version = "1", features = ["full"]}

aes-kw = "0.2.1"
argon2 = "0.5.2"
bollard = "0.15.0"
rmp-serde = "1.1.2"
ssh-key = {version = "0.6.2", features = ["ed25519", "serde"]}
zeroize = {version = "1", features = ["zeroize_derive"]}
