[package]
edition = "2021"
name = "nots"
version = "0.1.0"

[dependencies]
color-eyre = "0.6"
time = "0.3"
tracing = "0.1"
tracing-error = "0.2"

dashmap = "5.5.3"
nots-core = {path = "../nots-core"}
serde = "1.0.189"
serde_json = "1.0"

opendal = {version = "0.41", default-features = false, features = ["services-persy"]}
persy = "1.4.5"

axum = {version = "0.6", features = ["macros"]}
hyper = "0.14"
tokio = {version = "1", features = ["full"]}
tokio-cron-scheduler = {version = "0.9", features = ["signal"]}

aes-kw = {version = "0.2", features = ["std"]}
argon2 = "0.5.2"
zeroize = {version = "1", features = ["zeroize_derive"]}

# docker
bollard = {version = "0.15.0", optional = true}

rand = "0.8"
rmp-serde = "1.1.2"

# git
gix = {version = "0.55", default-features = false, optional = true}

# ssh
ssh-key = {version = "0.6.2", features = ["ed25519", "getrandom", "serde"], optional = true}

[features]
default = ["git", "ssh", "docker"]

docker = ["dep:bollard"]
git = ["dep:gix", "ssh"]
ssh = ["dep:ssh-key"]
