[package]
edition="2021"
name="notsd"
publish=false
version="0.1.7"

[dependencies]
color-eyre="0.6"
tracing="0.1"
aes-kw={version="0.2", features=["std"]}
argon2="0.5.2"
zeroize={version="1", features=["zeroize_derive"]}
nots-client={path="../nots-client", version="*", default-features=false, features=[
    "glob",
    "api",
    "worker",
    "tls",
]}
cuid2="0.1"

# serialization
time={version="0.3", features=["serde"]}
serde="1.0.189"
serde_json="1.0"
rmp-serde="1.1.2"
crossbeam="0.8"
globset="0.4.13"

# database
surrealdb={version="1", default-features=false, features=["kv-rocksdb"]}
opendal={version="0.41", default-features=false, features=["services-fs"]}

# http
axum={version="0.6", features=["macros"]}
hyper="0.14"
tokio={version="1", features=["full"]}

# docker
bollard={version="0.15.0", optional=true}

# ssh
ssh-key={version="0.6.2", features=["ed25519", "getrandom", "serde"]}

nix={version="0.27", features=["user"]}

[features]
default=["docker"]
distributed=[]
docker=["dep:bollard"]
systemd=[]
